[package]
name = "skycheats"
version = "0.1.0"
edition = "2021"

[dependencies]
crc = "*"
num = "*"
md-5 = "*"
block-modes = "0.8"
block-padding = "*"
aes = "0.7.5"
strum = "0.26"
strum_macros = "0.26"
mifare_utils = {git = "https://github.com/this-tarta/Mifare-Utils.git"}
egui = "0.30"
eframe = "0.30"
rfd = "*"